# terra-bridge

./: README.ja.md  README.md  README.zh-CN.md  SPEC.ja.md  SPEC.md  SPEC.zh-CN.md  config.json
docs/: README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.zh-CN.md  README.zh-TW.md  SPEC.de.md  SPEC.es.md  SPEC.fr.md  SPEC.ja.md  SPEC.ko.md  SPEC.zh-CN.md  SPEC.zh-TW.md  THIRD_PARTY_INFERENCE.de.md  THIRD_PARTY_INFERENCE.es.md  THIRD_PARTY_INFERENCE.fr.md  THIRD_PARTY_INFERENCE.ja.md  THIRD_PARTY_INFERENCE.ko.md  THIRD_PARTY_INFERENCE.md  THIRD_PARTY_INFERENCE.zh-CN.md  THIRD_PARTY_INFERENCE.zh-TW.md
gui/: index.html  package-lock.json  package.json
gui/src/: App.css  App.tsx  types.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/resources/: config.json  proxy_server.py  requirements.txt  run-logging.bat  run.bat
gui/src-tauri/src/: lib.rs  main.rs  proxy.rs
gui/src/components/: ApiKeyPanel.tsx  ClaudeConfigPanel.tsx  ConfigPanel.tsx  FirstRunLanguagePicker.tsx  Header.tsx  LogPanel.tsx  ProviderTiles.tsx  StatusPanel.tsx  TabBar.tsx
gui/src/i18n/: translations.ts
gui/src/i18n/lang/: en.ts  fr.ts  ja.ts  ko.ts  zh-CN.ts  zh-TW.ts
