[package]
name = "anthropic-proxy-gateway"
version = "0.6.0"
edition = "2021"

[lib]
name = "anthropic_proxy_gateway_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
chrono = "0.4"
encoding_rs = "0.8"
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
futures = "0.3"
tokio = { version = "1", features = ["net", "rt", "sync", "macros"] }
tracing = "0.1"
